@@ -15,6 +15,25 @@
     <description>mapping framework</description>
     <packaging>jar</packaging>
 
+    <!-- licence -->
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://opensource.org/licenses/Apache-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <!--developer -->
+
+    <developers>
+        <developer>
+            <name>Andreas Ernst</name>
+            <email>andreas.ernst7@gmail.com</email>
+        </developer>
+    </developers>
+
     <!-- properties -->
 
     <properties>
@@ -30,6 +49,8 @@
 
         <project.scm.id>github</project.scm.id>
         <kotlin.version>1.9.20-Beta2</kotlin.version>
+
+        <build-plugin.jacoco.version>0.8.12</build-plugin.jacoco.version>
     </properties>
 
     <!-- distributionManagement -->
@@ -110,9 +131,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                </configuration>
+                <!--configuration>
+                    <argLine>-add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration-->
             </plugin>
 
             <plugin>
@@ -180,4 +201,36 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${build-plugin.jacoco.version}</version>
+                        <executions>
+                            <!-- Prepares the property pointing to the JaCoCo runtime agent
+                            which is passed as VM argument when Maven the Surefire plugin is executed. -->
+                            <execution>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <!-- Ensures that the code coverage report is created after
+                            all tests have been run. -->
+                            <execution>
+                                <id>generate-report</id>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
